--- a/capsense-remote-controller-firmware/.config
+++ b/capsense-remote-controller-firmware/.config
@@ -153,7 +153,7 @@ CONFIG_RT_USING_PIN=y
 # CONFIG_RT_USING_NULL is not set
 # CONFIG_RT_USING_ZERO is not set
 # CONFIG_RT_USING_RANDOM is not set
-# CONFIG_RT_USING_PWM is not set
+CONFIG_RT_USING_PWM=y
 # CONFIG_RT_USING_MTD_NOR is not set
 # CONFIG_RT_USING_MTD_NAND is not set
 # CONFIG_RT_USING_PM is not set
@@ -1258,7 +1258,11 @@ CONFIG_BSP_USING_UART=y
 # CONFIG_BSP_USING_UART4 is not set
 # CONFIG_BSP_USING_UART5 is not set
 CONFIG_BSP_USING_UART6=y
-# CONFIG_BSP_USING_PWM is not set
+CONFIG_BSP_USING_PWM=y
+CONFIG_BSP_USING_PWM0=y
+CONFIG_BSP_USING_PWM0_CH0=y
+CONFIG_BSP_USING_PWM0_PORT0=y
+# CONFIG_BSP_USING_PWM0_CH7 is not set
 # CONFIG_BSP_USING_SPI is not set
 # CONFIG_BSP_USING_ADC is not set
 # CONFIG_BSP_USING_HW_I2C is not set
@@ -1276,7 +1280,8 @@ CONFIG_BSP_USING_UART6=y
 #
 # Board extended module Drivers
 #
-# CONFIG_BSP_USING_SLIDER is not set
+CONFIG_BSP_USING_SLIDER=y
+CONFIG_BSP_USING_SLIDER_SAMPLE=y
 # CONFIG_BSP_USING_RW007 is not set
 CONFIG_BSP_USING_CYW43012_WIFI=y
 # CONFIG_BSP_USING_CYW43012_BT is not set
